# end-to-end-stress-detection-system

./: .env.example  .gitignore  README.md  bvp_scaler_S17.pkl  eda_scaler_S17.pkl  env.example  pyproject.toml  setup.sh  stress-detection.code-workspace  stress.db
ml/data/: preprocessor.py  wesad_loader.py
ml/experiments/: train.py
services/inference-service/: Dockerfile
services/inference-service/app/: config.py  main.py  model.py  schemas.py
services/llm-service/: Dockerfile
services/llm-service/app/: config.py  gemini.py  main.py  schemas.py
services/response-router/: Dockerfile
services/response-router/app/: config.py  database.py  main.py  models.py  orchestrator.py  schemas.py  security.py  ws_manager.py
services/sensor-simulator/: Dockerfile  simulator.py
