[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-detection-system"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["ml*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
    "B008",  # FastAPI dependency injection pattern
]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "ml",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "services/inference-service/tests",
    "services/llm-service/tests",
    "services/response-router/tests",
]
